--- a/pets.html
+++ b/pets.html
@@ -52,6 +52,10 @@
         line-height: 2em;
       }
     </style>
+
+<script async custom-element="amp-story"
+        src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
+
   </head>
   <body>
   </body>
