--- a/pets.html
+++ b/pets.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ⚡>
+<html amp>
   <head>
     <meta charset="utf-8">
     <title>Joy of Pets</title>
@@ -57,6 +57,39 @@
         src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
 
   </head>
-  <body>
-  </body>
+<body>
+
+<amp-story standalone
+      title="Joy of Pets"
+      publisher="AMP tutorials"
+      publisher-logo-src="assets/AMP-Brand-White-Icon.svg"
+      poster-portrait-src="assets/cover.jpg">
+
+<amp-story-page id="cover">
+  <amp-story-grid-layer template="fill">
+    <amp-img src="./assets/cat.jpg"
+    width="720" height="1280"
+    layout="responsive">
+  </amp-img>
+  
+  <amp-story-grid-layer template="vertical">
+<h1>The joy of petsテスト</h1>
+<p>by Yokoyama Go</p>
+</amp-img>
+  </amp-story-grid-layer>
+  
+
+</amp-story-page>
+
+
+
+
+
+
+
+
+
+</amp-story>
+
+</body>
 </html>
