added some pages
wondering why's audio is  not played...

--- a/pets.html
+++ b/pets.html
@@ -96,8 +96,8 @@
 
 </amp-story-page>
 <!-- I wonder this code dowsn't work why
-  
-   
+
+
 <amp-story-page id="page2">
   <amp-story-grid-layer template="fill">
   
@@ -113,7 +113,7 @@
 
 </amp-story-page>
 
-<amp-story-page id="page2-correct">
+<amp-story-page id="page2-peeked">
     <amp-story-grid-layer template="fill">
       <amp-img src="assets/dog.jpg" 
           width="720" height="1280"
@@ -126,7 +126,22 @@
     </amp-story-grid-layer>
   </amp-story-page>
 
+<amp-story-page id="page3" background-audio="assets/bird-singing.mp3">
+  <amp-story-grid-layer template="fill">
+    <amp-img src="./assets/bird.jpg"
+    height="1280px"
+    width="720px"
+    layout="responsive"></amp-img>
 
+  </amp-story-grid-layer>
+  <amp-story-grid-layer template="vertical">
+    <h1>Birds!!!🐤</h1>
+  </amp-story-grid-layer>
+  <amp-story-grid-layer template="vertical" class="bottom">
+    <q>引用!!!!!!!!!!!!!!!!!!</q>
+  </amp-story-grid-layer>
+
+</amp-story-page>
 
 
 
