--- a/pets.html
+++ b/pets.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
     <style amp-custom>
       amp-story {
@@ -138,18 +139,75 @@
     <h1>Birds!!!🐤</h1>
   </amp-story-grid-layer>
   <amp-story-grid-layer template="vertical" class="bottom">
-    <q>引用!!!!!!!!!!!!!!!!!!</q>
+    <q animate-in="drop">引用!!!!!!!!!!!!!!!!!!</q>
+  </amp-story-grid-layer>
+
+</amp-story-page>
+
+<amp-story-page id="page4">
+<amp-story-grid-layer template="fill">
+  <amp-video src="./assets/rabbit.mp4"  
+  poster="/assets/rabbit.jpg" 
+  autplay 
+  loop
+  width="720px" height="1280px"
+  layout="responsive"></amp-video>
+</amp-story-grid-layer>
+
+<amp-story-grid-layer template="vertical">
+  <h1>🐰Rab兎bit🐇</h1>
+</amp-story-grid-layer>
+
+
+<amp-story-grid-layer template="vertical">
+  <p class="bottom">🐇🐰🐇🐰🐇🐰🐇🐰🐇🐰🐇🐰🐇🐰🐇🐰🐇🐰🐇🐰
+</p>
+
   </amp-story-grid-layer>
 
 </amp-story-page>
 
 
+<amp-story-page id="finale">
+
+        <amp-story-grid-layer template="vertical" class="noedge">
+          <div class="wrapper">
+            <amp-img src="assets/cat.jpg"
+                width="720" height="1280"
+                layout="responsive" 
+                animate-in="fade-in"
+                animate-in-delay="0.2s">
+            </amp-img>
+            <amp-img src="assets/dog.jpg"
+                width="720" height="1280"
+                layout="responsive"
+                 animate-in="fade-in"
+                 animate-in-delay="0.2s">
+            </amp-img>
+            <amp-img src="assets/bird.jpg"
+                width="720" height="1280"
+                layout="responsive"
+                 animate-in="fade-in"
+                 animate-in-delay="0.2s">
+            </amp-img>
+            <amp-img src="assets/rabbit.jpg"
+                width="720" height="1280"
+                layout="responsive"
+                 animate-in="fade-in"
+                 animate-in-delay="0.2s">
+            </amp-img>
+          </div>
+        </amp-story-grid-layer>
+        <amp-story-grid-layer template="vertical" class="center-text">
+          <p class="banner-text" animate-in="whoosh-in-right">Pets can lower your stress levels!</p>
+        </amp-story-grid-layer>
+ 
+</amp-story-page>
 
 
-
-
-
-
+</amp-story-page>
+<amp-story-bookend src="./bookend.json" layout="nodisplay"></amp-story-bookend>
+</amp-story>
 </amp-story>
 
 </body>
