fixed error from amp checker

--- a/pets.html
+++ b/pets.html
@@ -148,7 +148,7 @@
 <amp-story-grid-layer template="fill">
   <amp-video src="./assets/rabbit.mp4"  
   poster="/assets/rabbit.jpg" 
-  autplay 
+  autoplay 
   loop
   width="720px" height="1280px"
   layout="responsive"></amp-video>
